[gd_scene load_steps=19 format=3 uid="uid://bpa0ix5wqg68n"]

[ext_resource type="Script" uid="uid://bc6wki4amvsx" path="res://scripts/battle.gd" id="1_a12nh"]
[ext_resource type="Texture2D" uid="uid://b2eajagu6j5pi" path="res://assets/sprites/pokemon_rpg_screen_grayscale.png" id="1_dn72j"]
[ext_resource type="Theme" uid="uid://bb5xdt6d0xc8h" path="res://assets/themes/main.tres" id="2_p1qf1"]
[ext_resource type="PackedScene" uid="uid://fv7kkv5dklb5" path="res://scenes/moves_menu.tscn" id="4_p0caf"]
[ext_resource type="PackedScene" uid="uid://bs4b2pu5fsx6o" path="res://scenes/health_panel.tscn" id="5_ekamt"]
[ext_resource type="Script" uid="uid://brto6aw55bukl" path="res://scripts/states/Info.gd" id="7_v7i3o"]
[ext_resource type="Script" uid="uid://buy2ylv1t0vt0" path="res://scripts/states/EnemyAttack.gd" id="8_66ngm"]
[ext_resource type="Script" uid="uid://bl3wtt7v3rtpm" path="res://scripts/states/SelectingAction.gd" id="9_03edq"]
[ext_resource type="Script" uid="uid://dxrkm475i6ls6" path="res://scripts/states/SelectingAttack.gd" id="10_22uqi"]
[ext_resource type="Script" uid="uid://cmikjgcwtvkyk" path="res://scripts/states/IncrementTurn.gd" id="12_03edq"]
[ext_resource type="Script" uid="uid://bm0o2eovnfws7" path="res://scripts/states/Attack.gd" id="13_6ni85"]
[ext_resource type="Script" uid="uid://sdwupuxudrjb" path="res://scripts/states/BattleOver.gd" id="13_22uqi"]
[ext_resource type="Script" uid="uid://d0rdycr2tr5ll" path="res://scripts/states/EnactStatuses.gd" id="14_6ni85"]
[ext_resource type="Script" uid="uid://csb7lr8wxaxfr" path="res://scripts/states/DeadMonsterInfo.gd" id="14_p0caf"]
[ext_resource type="PackedScene" uid="uid://jpf5gywks7wx" path="res://scenes/trinket_shelf.tscn" id="17_h4dll"]
[ext_resource type="Texture2D" uid="uid://fs4ws7okfwn5" path="res://assets/sprites/trinket_icons/arrow.png" id="18_h4dll"]
[ext_resource type="PackedScene" uid="uid://cv5e4qocm73cv" path="res://scenes/debug_menu.tscn" id="19_p0caf"]
[ext_resource type="PackedScene" uid="uid://capm3p3n50hky" path="res://scenes/battle_ui_manager.tscn" id="23_fpf3k"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_a12nh")

[node name="Backdrop" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(128, 72)
texture = ExtResource("1_dn72j")

[node name="BottomBar" type="Node2D" parent="."]
z_index = 1

[node name="PlayerPrompt" type="Label" parent="BottomBar"]
unique_name_in_owner = true
visible = false
z_index = 1
anchors_preset = -1
offset_top = 111.0
offset_right = 162.0
offset_bottom = 143.0
mouse_filter = 1
theme = ExtResource("2_p1qf1")
text = "What will PLAYER do?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Action" type="Control" parent="BottomBar"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="BottomBar/Action"]
layout_mode = 0
offset_left = 161.0
offset_top = 111.0
offset_right = 256.0
offset_bottom = 144.0
theme = ExtResource("2_p1qf1")
theme_type_variation = &"FullBorderPanel"

[node name="ActionButtons" type="VBoxContainer" parent="BottomBar/Action"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = 162.0
offset_top = 112.0
offset_right = 255.0
offset_bottom = 143.0
theme = ExtResource("2_p1qf1")

[node name="Attack" type="Button" parent="BottomBar/Action/ActionButtons"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../../../TrinketShelf/TrinketIconContainer/button")
focus_neighbor_bottom = NodePath("../Tracker")
text = "   Attack"
alignment = 0

[node name="Tracker" type="Button" parent="BottomBar/Action/ActionButtons"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Attack")
text = "   Tracker"
alignment = 0

[node name="BattleStatus" type="Label" parent="BottomBar"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
offset_top = 111.0
offset_right = 256.0
offset_bottom = 143.0
mouse_filter = 1
theme = ExtResource("2_p1qf1")
text = "Player Attacked Enemy"
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="BottomBar/BattleStatus"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_right = 255.0
offset_bottom = 32.0
theme = ExtResource("2_p1qf1")
text = "Continue"

[node name="Moves" parent="BottomBar" instance=ExtResource("4_p0caf")]
unique_name_in_owner = true
visible = false

[node name="HealthPanels" type="Node2D" parent="."]
position = Vector2(-1, 0)

[node name="PlayerHealthPanel" parent="HealthPanels" instance=ExtResource("5_ekamt")]
unique_name_in_owner = true
anchors_preset = -1
offset_left = 145.0
offset_top = 71.0
offset_right = 145.0
offset_bottom = 71.0

[node name="EnemyHealthPanel" parent="HealthPanels" instance=ExtResource("5_ekamt")]
unique_name_in_owner = true
anchors_preset = -1
offset_left = 17.0
offset_top = 21.0
offset_right = 17.0
offset_bottom = 21.0
show_hp_numbers = false

[node name="StateDisplay" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
offset_left = 96.0
offset_right = 255.0
offset_bottom = 12.0
theme = ExtResource("2_p1qf1")
text = "state:"

[node name="TurnDisplay" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
offset_right = 96.0
offset_bottom = 12.0

[node name="BattleStateMachine" type="Node" parent="."]
unique_name_in_owner = true

[node name="INFO" type="Node" parent="BattleStateMachine"]
script = ExtResource("7_v7i3o")

[node name="ENEMY_ATTACK" type="Node" parent="BattleStateMachine"]
script = ExtResource("8_66ngm")

[node name="SELECTING_ACTION" type="Node" parent="BattleStateMachine"]
script = ExtResource("9_03edq")

[node name="SELECTING_ATTACK" type="Node" parent="BattleStateMachine"]
script = ExtResource("10_22uqi")

[node name="INCREMENT_TURN" type="Node" parent="BattleStateMachine"]
script = ExtResource("12_03edq")

[node name="BATTLE_OVER" type="Node" parent="BattleStateMachine"]
script = ExtResource("13_22uqi")

[node name="ATTACK" type="Node" parent="BattleStateMachine"]
script = ExtResource("13_6ni85")

[node name="ENACT_STATUSES" type="Node" parent="BattleStateMachine"]
script = ExtResource("14_6ni85")

[node name="DEAD_MONSTER_INFO" type="Node" parent="BattleStateMachine"]
script = ExtResource("14_p0caf")

[node name="BattleUiManager" parent="." instance=ExtResource("23_fpf3k")]
unique_name_in_owner = true

[node name="TrinketShelf" parent="." node_paths=PackedStringArray("trinket_info_label", "trinket_info_panel", "trinket_info_sprite") instance=ExtResource("17_h4dll")]
unique_name_in_owner = true
anchors_preset = -1
trinket_info_label = NodePath("../TrinketInfoLabel")
trinket_info_panel = NodePath("../TrinketInfoSpritePanel")
trinket_info_sprite = NodePath("../TrinketInfoSpritePanel/TrinketInfoSprite")

[node name="TrinketInfoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 3
z_as_relative = false
anchors_preset = -1
offset_top = 21.0
offset_right = 128.0
offset_bottom = 62.0
theme = ExtResource("2_p1qf1")
theme_type_variation = &"TrinketInfoLabel"
bbcode_enabled = true
text = "Inferno
Change the player's type to FIRE"
autowrap_mode = 2

[node name="TrinketInfoSpritePanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
offset_left = 220.0
offset_top = 2.0
offset_right = 254.0
offset_bottom = 35.0

[node name="TrinketInfoSprite" type="Sprite2D" parent="TrinketInfoSpritePanel"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(17, 17)
scale = Vector2(2, 2)
texture = ExtResource("18_h4dll")

[node name="DebugMenu" parent="." instance=ExtResource("19_p0caf")]
visible = false

[connection signal="pressed" from="BottomBar/Action/ActionButtons/Attack" to="BattleStateMachine/SELECTING_ACTION" method="_on_attack_pressed"]
[connection signal="pressed" from="BottomBar/Action/ActionButtons/Tracker" to="BattleStateMachine/SELECTING_ACTION" method="_on_tracker_pressed"]
[connection signal="pressed" from="BottomBar/BattleStatus/ContinueButton" to="." method="_on_continue_button_pressed"]
